Update live demo

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>Output Management</title>
     <script src="https://kit.fontawesome.com/321e54ee43.js" crossorigin="anonymous"></script>
 </head>
 <body>
