add method to add new tasks

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div id='title-container'><p class="list-title">Today's To Do</p><i class="fa-solid fa-arrows-rotate"></i></div>
         <form id="task-form">
           <input type="text" id="add-task" placeholder="Add to your list..."/>
-          <button type="submit" class="submit-button">↵</button>
+          <button class="submit-button">↵</button>
         </form>
     </section>
     <a id="clear-btn">Clear all completed</a>
