Add logo and change title

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Output Management</title>
+    <title>To do List</title>
     <script src="https://kit.fontawesome.com/321e54ee43.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="logo">Carrera<i class="fa-solid fa-circle-dot"></i>Programmer</div>
     <section class="list-section">
         <div id='title-container'><p class="list-title">Today's To Do</p><i class="fa-solid fa-arrows-rotate"></i></div>
         <form id="task-form">
