--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <script src="https://kit.fontawesome.com/321e54ee43.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700&display=swap" rel="stylesheet">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600;700&family=Raleway:wght@300&display=swap" rel="stylesheet">
+    </head>
 <body>
     <div class="logo">Carrera<i class="fa-solid fa-circle-dot"></i>Programmer</div>
     <section class="list-section">
